deploy: 9750c1e2e8215884bb0d9ec193b37864f84aa0c7

--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
 col-md-8 col-md-offset-1
 col-sm-12
 col-xs-12
-post-container"><select class=sel-lang onchange=onLanChange(this.options[this.options.selectedIndex].value)><option value=0 selected> 中文 | Chinese</option><option value=1> 英文 | English</option></select><div class="zh post-container"><h2 id=关于我>关于我</h2><p>有机实验室里的小码农</div><div class="en post-container"><h2 id=about-me>About Me</h2><p>Coding Boy used to be in lab</p></div></div><div class="col-lg-3 col-lg-offset-0
+post-container"><select class=sel-lang onchange=onLanChange(this.options[this.options.selectedIndex].value)><option value=0 selected> 中文 | Chinese</option><option value=1> 英文 | English</option></select><div class="zh post-container"><h2 id=关于我>关于我</h2><p>有机实验室里的小码农</div><div class="en post-container"><h2 id=about-me>About Me</h2><p>Coding Boy used to be in A Lab</p></div></div><div class="col-lg-3 col-lg-offset-0
 col-md-3 col-md-offset-0
 col-sm-12
 col-xs-12
